# easyocr-screenshot-gui

./: Medusa_Failing_I2C BUS.txt  README.md  app.py  ocr_core.py  pyproject.toml
