[project]
name = "easyocr-screenshot-gui"
version = "0.4.0"
description = "Offline EasyOCR (English) screenshot OCR with one-page UI, zoom/pan preview, overlay, and exports."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "easyocr>=1.7.2",
  "opencv-python>=4.8",
  "pillow>=10.0",
  "customtkinter>=5.2.0",
]
